--- a/vars/main.yml
+++ b/vars/main.yml
@@ -4,3 +4,4 @@
 list_youtrack_required_packages:
   - openjdk-8-jre
 
+youtrack_dstr_url: https://download.jetbrains.com/charisma/youtrack-2018.3.46358.jar
