--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -6,6 +6,14 @@
   apt:
     name: "{{list_youtrack_required_packages}}"
     state: latest
+    cache_valid_time: 3600
+
+- systemd:
+    name: youtrack
+    enabled: yes
+    state: stopped
+  become: yes
+  failed_when: false
 
 - file:
     path: "{{item}}"
@@ -54,7 +62,7 @@
 - name: Configure for reversy proxy
   become: yes
   become_user: youtrack
-  command: "/usr/bin/java -jar {{youtrack_path_jar}} configure --listen-port 8080  --base-url:{{youtrack_url_scheme}}://{{youtrack_server_name}}"
+  command: "/usr/bin/java -jar {{youtrack_path_jar}} configure --listen-port 8080  --base-url {{youtrack_url_scheme}}://{{youtrack_server_name}} -J-Djetbrains.youtrack.default.page={{youtrack_default_page}}"
 
 - name: create systemd unit
   become: yes
